--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
   <tr>
     <!-- <td><img class="proj_thumb" src="./files/NEURALCOM_2023_SSDL.png" alt="" height="120px"/>&nbsp;</td> -->
     <td>
-    <p class="pub_title">LESS: Label-Efficient and Single-Stage Referring 3D Instance Segmentation</p>
-    <p class="pub_author">Xuexun Liu, <b>Xiaoxu Xu</b>, Jinlong Li, Qiudan Zhang, Xu Wang, Lin Ma, Nicu Sebe<br>
+    <p class="pub_title">Weakly-Supervised 3D Visual Grounding based on Visual Linguistic Alignment</p>
+    <p class="pub_author"><b>Xiaoxu Xu*</b>, Yitian Yuan*, Qiudan Zhang, Wenhui Wu, Zequn Jie, Lin Ma, Xu Wang<br>
       <!-- Neurocomputing</i> (<b>NEUCOM</b>), 2023.<br> -->
       <!-- Submitted to NeurIPS2024</i><br> -->
-      [<a href="https://xiaoxuxu.github.io/">Paper Link</a>]
+      [<a href="https://arxiv.org/pdf/2312.09625">Paper Link</a>]
       <p style="text-align:justify; text-justify:inter-ideograph;color:red;">
       </p>
     </p> </td>
@@ -130,7 +130,7 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
   <td><img class="proj_thumb" src="./files/3DSS_VLG.png" alt="" height="120px"/>&nbsp;</td>
   <td>
   <p class="pub_title">3D Weakly Supervised Semantic Segmentation with 2D Vision-Language Guidance</p>
-  <p class="pub_author">Xiaoxu Xu, Yitian Yuan, <b>Jinlong Li</b>, Qiudan Zhang, Zequn Jie, Lin Ma, Hao Tang, Nicu Sebe, Xu Wang<br>
+  <p class="pub_author"><b>Xiaoxu Xu</b>, Yitian Yuan, Jinlong Li, Qiudan Zhang, Zequn Jie, Lin Ma, Hao Tang, Nicu Sebe, Xu Wang<br>
     European Conference on Computer Vision (<b>ECCV</b>), </em>2024.<br>
     [<a href="https://arxiv.org/abs/2407.09826">ArXiv Link</a>]
     [<a href="https://github.com/xuxiaoxxxx/3DSS-VLG">Code</a>]<br>
@@ -144,7 +144,7 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
     <td><img class="proj_thumb" src="./files/3D_LESS.png" alt="" width="240px" height="120px" style="box-shadow: 4px 4px 8px #888"/>&nbsp;</td>
     <td>
     <p class="pub_title">LESS: Label-Efficient and Single-Stage Referring 3D Instance Segmentation</p>
-    <p class="pub_author">Xuexun Liu*, Xu Xiaoxu*, <b>Jinlong Li*</b>, Qiudan Zhang, Xu Wang, Lin Ma, Nicu Sebe<br>
+    <p class="pub_author">Xuexun Liu*, <b>Xu Xiaoxu*</b>, Jinlong Li*, Qiudan Zhang, Xu Wang, Lin Ma, Nicu Sebe<br>
       Neural Information Processing Systems (<b>NeurIPS</b>), </em> 2024.<br>
     <!-- [<a href="http://arxiv.org/abs/2209.07761/">ArXiv Link</a>] -->
     <!-- [<a href="https://github.com/TyroneLi/ESOL_WSSS">Code</a>]<br> -->
