--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ Email: 2018151108@email.szu.edu.cn <br />
 <!-- <h2>Biography</h2>
 <p> 
   I
-  <!-- I am now a first-year PhD student at the Multimedia and  Human Understanding Group (<a href="http://mhug.disi.unitn.it/">MHUG</a>), 
+  <-- I am now a first-year PhD student at the Multimedia and  Human Understanding Group (<a href="http://mhug.disi.unitn.it/">MHUG</a>), 
   under the supervision of <a href="https://disi.unitn.it/~sebe/">Prof. Nicu Sebe</a>.
   Previously, I worked at <a href="https://about.meituan.com/">MeiTuan</a> as a computer vision scientist, working closely with <a href="https://forestlinma.com/">Dr. Lin Ma</a> 
   and <a href="https://scholar.google.com/citations?user=4sKGNB0AAAAJ&hl=zh-CN">Dr. Zequn Jie</a>, focusing on 2D/3D Label-Efficient Detection and Segmentation. 
   Before that, I obtained my B.Sc and M.Sc degree in <a href="https://en.szu.edu.cn/">Shenzhen University</a>.  -->
-<!-- </p> --> -->
+<!-- </p> --> 
 
 
 <h2>Research Interest</h2>
