--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- <a>Third-year PhD Student.</a><br />
 Multimedia and  Human Understanding Group, <a href="http://mhug.disi.unitn.it/" target="_blank">MHUG</a><br /> -->
 Greetings! My name is Xiaoxu Xu.
-I am the third-year of a master program at Shenzhen University, under the supervision of Prof.Xu Wang, with a focus on 3D Label-Efficient scene understanding. Before that, I obtained my B.Sc degree in Shenzhen University.
+I am the third-year of a master program at Shenzhen University, under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>, with a focus on 3D Label-Efficient scene understanding. Before that, I obtained my B.Sc degree in Shenzhen University.
 <br />
 
 <!-- <a href="https://about.meituan.com/">Meituan Inc.</a><br />
@@ -146,13 +146,10 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
     <p class="pub_title">LESS: Label-Efficient and Single-Stage Referring 3D Instance Segmentation</p>
     <p class="pub_author">Xuexun Liu*, <b>Xu Xiaoxu*</b>, Jinlong Li*, Qiudan Zhang, Xu Wang, Lin Ma, Nicu Sebe<br>
       Neural Information Processing Systems (<b>NeurIPS</b>), </em> 2024.<br>
-    <!-- [<a href="http://arxiv.org/abs/2209.07761/">ArXiv Link</a>] -->
-    <!-- [<a href="https://github.com/TyroneLi/ESOL_WSSS">Code</a>]<br> -->
-    <!-- [<a href="bibtex.html#zhang2022practical" target="_blank">BibTex</a>] -->
-    <!-- <p style="text-align:justify; text-justify:inter-ideograph;color:red;">
-      Abstract: We propose a new training pipeline to alleviate the partial localization 
-      issue of the CAM in Weakly-supervised image semantic segmentation, ESOL, in a Divide-and-Conquer manner.
-    </p> -->
+    [<a href="https://arxiv.org/pdf/2410.13294">ArXiv Link</a>]
+    [<a href="https://github.com/mellody11/LESS">Code</a>]<br>
+    <p style="text-align:justify; text-justify:inter-ideograph;color:red;">
+
     </p> </td>
     </tr>
 
