--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
 <br />
 <!-- <a>Third-year PhD Student.</a><br />
 Multimedia and  Human Understanding Group, <a href="http://mhug.disi.unitn.it/" target="_blank">MHUG</a><br /> -->
-Greetings! My name is Xiaoxu Xu.
-I am the third-year of a master program at Shenzhen University, under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>, with a focus on 3D Label-Efficient scene understanding. Before that, I obtained my B.Sc degree in Shenzhen University.
+Greetings! My name is Xiaoxu Xu. 
 <br />
+I am currently in my third year of a master's program at Shenzhen University, focusing on 3D label-efficient scene understanding under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>. Prior to this, I obtained my B.Sc. degree from Shenzhen University.
+<br />
+<!-- Greetings! My name is Xiaoxu Xu.
+I am the third-year of a master program at Shenzhen University, under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>, with a focus on 3D Label-Efficient scene understanding. Before that, I obtained my B.Sc degree in Shenzhen University.
+<br /> -->
 
 <!-- <a href="https://about.meituan.com/">Meituan Inc.</a><br />
  Vision Department, <a target="_blank">Research Scientist</a><br />
