--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
 
 
 <li>
-  <div style="float:left; text-align:left">Research Scientist, DJI.</div> <div style="text-align:center"><p style="text-align: right;">2024.01 - 2024.07 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
+  <div style="float:left; text-align:left">Computer Vision Engineer (Intern), DJI.</div> <div style="text-align:center"><p style="text-align: right;">2024.01 - 2024.07 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
 </li>
 
 <li>
-  <div style="float:left; text-align:left">Intern, MeiTuan Inc.</div> <div style="text-align:center"><p style="text-align: right;">2021.12 - 2022.04 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
+  <div style="float:left; text-align:left">Computer Vision Engineer (Intern), MeiTuan Inc.</div> <div style="text-align:center"><p style="text-align: right;">2021.12 - 2022.04 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</p></div>
 </li>
 
 
