--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
 
 <h2>News</h2>
 <ul>
+  <li>
+    2025 Feb.: Our work 3D-VLA got accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">TMM 2025</a>!
+  </li>
 
   <li>
     2024 Sept.: Our work LESS got accepted by <a href="https://nips.cc/">NeurIPS 2024</a>!
@@ -104,26 +107,22 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
 </ul>
 
 <!-- PrePrint Project -->
-<a id="PrePrints" class="anchor"></a>
+<!-- <a id="PrePrints" class="anchor"></a>
 <h2>PrePrints</h2>
 
 <table class="imgtable">
 
-  <!-- Submitted to NeurIPS2024-->
   <tr>
-    <!-- <td><img class="proj_thumb" src="./files/NEURALCOM_2023_SSDL.png" alt="" height="120px"/>&nbsp;</td> -->
     <td>
     <p class="pub_title">Weakly-Supervised 3D Visual Grounding based on Visual Linguistic Alignment</p>
     <p class="pub_author"><b>Xiaoxu Xu*</b>, Yitian Yuan*, Qiudan Zhang, Wenhui Wu, Zequn Jie, Lin Ma, Xu Wang<br>
-      <!-- Neurocomputing</i> (<b>NEUCOM</b>), 2023.<br> -->
-      <!-- Submitted to NeurIPS2024</i><br> -->
       [<a href="https://arxiv.org/pdf/2312.09625">Paper Link</a>]
       <p style="text-align:justify; text-justify:inter-ideograph;color:red;">
       </p>
     </p> </td>
     </tr>
 
-<table>
+<table> -->
 
 <!-- Project -->
 <a id="publications" class="anchor"></a>
@@ -159,6 +158,20 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
 
     </p> </td>
     </tr>
+
+    <tr>
+      <td><img class="proj_thumb" src="./files/3D_VLA.jpg" alt="" width="240px" height="120px" style="box-shadow: 4px 4px 8px #888"/>&nbsp;</td>
+      <td>
+      <p class="pub_title">Weakly-Supervised 3D Visual Grounding based on Visual Linguistic Alignment</p>
+      <p class="pub_author"><b>Xiaoxu Xu*</b>, Yitian Yuan*, Qiudan Zhang, Wenhui Wu, Zequn Jie, Lin Ma, Xu Wang<br>
+        IEEE Transactions on Multimedia (<b>TMM</b>), </em> 2025.<br>
+        [<a href="https://arxiv.org/pdf/2312.09625">Paper Link</a>]
+      <!-- [<a href="https://arxiv.org/pdf/2410.13294">ArXiv Link</a>] -->
+      <!-- [<a href="https://github.com/mellody11/LESS">Code</a>]<br> -->
+      <p style="text-align:justify; text-justify:inter-ideograph;color:red;">
+  
+      </p> </td>
+      </tr>
 
 <table>
 
