--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@ I work in the field of Computer Vision and Deep Learning. Recently, I focus on t
   <li>
     2025 Feb.: Our work 3D-VLA got accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">TMM 2025</a>!
   </li>
-
+  <li>
+    2025 Jan.: Invited to give a talk on <a href="https://www.wizsci.com/live/Wv8p71D">3D Weakly Supervised Semantic Segmentation</a> by <a href="https://www.ccf.org.cn/Chapters/Student_Chapters/Student_Chapters/scdx70/">CCF SZU</a>!
+  </li>
   <li>
     2024 Sept.: Our work LESS got accepted by <a href="https://nips.cc/">NeurIPS 2024</a>!
   </li>
