--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Greetings! My name is Xiaoxu Xu.
 I am currently in my third year of a master's program at Shenzhen University, focusing on 3D label-efficient scene understanding under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>. Prior to this, I obtained my B.Sc. degree from Shenzhen University.
 <br />
 
-<span style="color:red;">I am looking for a PhD position, if you are interested in me, please contact me</span>
+<!-- <span style="color:red;">I am looking for a PhD position, if you are interested in me, please contact me</span> -->
 
 <!-- Greetings! My name is Xiaoxu Xu.
 I am the third-year of a master program at Shenzhen University, under the supervision of <a href="https://scholar.google.com/citations?hl=en&user=XNDHhIEAAAAJ&view_op=list_works&sortby=pubdate">Prof.Xu Wang</a>, with a focus on 3D Label-Efficient scene understanding. Before that, I obtained my B.Sc degree in Shenzhen University.
